# oak-poe-standalone

./: README.md  pyproject.toml  requirements.txt
poe_host/: __init__.py  modbus_tcp_io_test.py  tcp_streaming_client_host.py  tcp_streaming_server_host.py  tcp_streaming_server_host_config_focus.py  yolo_host.py  yolo_utils.py
poe_standalone/: __init__.py  custom_pipeline.py  script_http_server.py  script_mjpeg_server.py  standalone.py  utils.py
poe_standalone/modbus_tcp/: modbus_server_test.py  pyModbusTCP.py
poe_standalone/tcp_streaming_client/: tcp_streaming_client.py
poe_standalone/tcp_streaming_server/: tcp_streaming_server.py  tcp_streaming_server_config_focus.py
poe_standalone/yolo/: yolo_decoding.py  yolo_stereo_decoding.py
poe_standalone/yolo/models/: yolov5_640_openvino_2021.4_6shave.blob  yolov6_640.json
